--- a/index.html
+++ b/index.html
@@ -1,1 +1,318 @@
+-
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>average plumbing costs in folsom 2026 in Folsom | Murray Plumbing Technical Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Technical overview of average plumbing costs in folsom 2026 in Folsom, covering diagnostic workflow, local standards, and factors that influence service complexity.">
+  <meta name="geo.position" content="38.6579;-121.1674">
+  <meta name="geo.placename" content="Folsom, California">
+  <meta name="geo.region" content="US-CA">
+  <style>
+    :root { --maxw: 800px; --pad: 18px; --fg: #111; --muted: #444; --line: #ddd; }
+    html, body { margin: 0; padding: 0; }
+    body { font-family: Arial, Helvetica, sans-serif; color: var(--fg); background: #fff; line-height: 1.55; }
+    header, main, footer { display: block; }
+    header, main, footer { max-width: var(--maxw); margin: 0 auto; padding: var(--pad); }
+    header { padding-top: 22px; padding-bottom: 10px; border-bottom: 1px solid var(--line); }
+    footer { border-top: 1px solid var(--line); margin-top: 10px; padding-top: 12px; padding-bottom: 22px; color: var(--muted); font-size: 0.95rem; }
+    h1 { font-size: 1.65rem; margin: 0 0 6px 0; }
+    h2 { font-size: 1.2rem; margin: 18px 0 8px; }
+    p { margin: 10px 0; }
+    .byline { margin: 0; color: var(--muted); }
+    section { margin: 0; padding: 0; }
+    dl { margin: 10px 0 0; padding: 0; }
+    dt { font-weight: 700; margin-top: 10px; }
+    dd { margin: 4px 0 0 0; color: var(--muted); }
+    .panel { border: 1px solid var(--line); border-radius: 8px; padding: 12px 12px; }
+    .note { color: var(--muted); font-size: 0.98rem; }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    caption { text-align: left; font-weight: 700; margin-bottom: 8px; }
+    th, td { border: 1px solid var(--line); padding: 10px; vertical-align: top; }
+    th { text-align: left; background: #f6f6f6; }
+    a { color: #0b57d0; }
+    .faq h3 { font-size: 1.02rem; margin: 12px 0 6px; }
+    .faq p { margin: 0 0 10px; color: var(--muted); }
+    .svg-wrap { margin-top: 10px; border: 1px solid var(--line); border-radius: 8px; padding: 10px; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>average plumbing costs in folsom 2026 in Folsom</h1>
+    <p class="byline">Technical Overview for Folsom Residents</p>
+  </header>
+
+  <main id="main">
+    <article>
+
+      <section aria-labelledby="intro">
+        <h2 id="intro">Introduction</h2>
+        <p>average plumbing costs in folsom 2026 describe how residential plumbing work is commonly scoped and documented across Folsom during the 2026 calendar year. In practice, “average cost” signals a composite of service tasks that can include evaluation, diagnosis, repair execution, and verification that the plumbing system returns to safe, functional operation.</p>
+        <p>Local conditions influence how a job is assessed. Folsom includes both established neighborhoods and newer developments, so piping material transitions, prior remodel work, and access constraints can change the complexity of otherwise similar repairs.</p>
+      </section>
+
+      <section aria-labelledby="terms">
+        <h2 id="terms">Key Terminology</h2>
+        <dl>
+          <dt>Diagnostic scope</dt>
+          <dd>The evaluation approach used to identify a fault, confirm its location, and determine the minimum necessary work to correct it.</dd>
+
+          <dt>Access condition</dt>
+          <dd>The practical ability to reach piping, valves, fixtures, or drain lines without extensive removal of finishes or structural elements.</dd>
+
+          <dt>Work verification</dt>
+          <dd>Post-repair checks that confirm system function, leak integrity, and acceptable drainage performance after an intervention.</dd>
+
+          <dt>Permit coordination</dt>
+          <dd>Administrative alignment with municipal requirements when work triggers inspection or documentation expectations.</dd>
+
+          <dt>Restoration scope</dt>
+          <dd>Non-plumbing work sometimes required after access, such as patching surfaces affected by repair entry points.</dd>
+        </dl>
+      </section>
+
+      <section aria-labelledby="process">
+        <h2 id="process">Process &amp; Diagnostics</h2>
+        <p>Cost patterns tend to follow the workflow used to reduce uncertainty. An initial assessment identifies symptoms (leaks, reduced flow, poor drainage, intermittent hot water), then narrows the problem using targeted diagnostics. Where drain or sewer behavior is involved, inspection tools can confirm obstruction type, material condition, or evidence of intrusion. Once the cause is confirmed, the repair plan focuses on stabilizing the system and preventing recurrence through appropriate material choices and verified connections.</p>
+
+        <div class="svg-wrap">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 860 170" width="100%" height="170" role="img" aria-labelledby="svcTitle">
+            <title id="svcTitle">Service flow for evaluating average plumbing costs in folsom 2026 in Folsom</title>
+            <desc>Diagram showing five aligned stages: intake and symptom review, targeted diagnostics, scope definition, repair execution, and verification with documentation.</desc>
+
+            <defs>
+              <style>
+                .bx{fill:#ffffff;stroke:#222;stroke-width:1.2}
+                .tx{font-family:Arial,Helvetica,sans-serif;font-size:14px;fill:#111}
+                .sm{font-size:12px;fill:#333}
+                .ar{stroke:#222;stroke-width:1.2;fill:none;marker-end:url(#m)}
+              </style>
+              <marker id="m" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+                <polygon points="0 0, 10 3.5, 0 7" fill="#222"></polygon>
+              </marker>
+            </defs>
+
+            <rect class="bx" x="18" y="38" rx="10" ry="10" width="150" height="90"></rect>
+            <text class="tx" x="93" y="72" text-anchor="middle">Intake</text>
+            <text class="sm" x="93" y="96" text-anchor="middle">symptoms &amp; context</text>
+
+            <rect class="bx" x="190" y="38" rx="10" ry="10" width="160" height="90"></rect>
+            <text class="tx" x="270" y="72" text-anchor="middle">Diagnostics</text>
+            <text class="sm" x="270" y="96" text-anchor="middle">confirm cause/location</text>
+
+            <rect class="bx" x="372" y="38" rx="10" ry="10" width="160" height="90"></rect>
+            <text class="tx" x="452" y="72" text-anchor="middle">Scope</text>
+            <text class="sm" x="452" y="96" text-anchor="middle">define work + materials</text>
+
+            <rect class="bx" x="554" y="38" rx="10" ry="10" width="160" height="90"></rect>
+            <text class="tx" x="634" y="72" text-anchor="middle">Execution</text>
+            <text class="sm" x="634" y="96" text-anchor="middle">repair/replace/install</text>
+
+            <rect class="bx" x="736" y="38" rx="10" ry="10" width="106" height="90"></rect>
+            <text class="tx" x="789" y="72" text-anchor="middle">Verify</text>
+            <text class="sm" x="789" y="96" text-anchor="middle">test &amp; document</text>
+
+            <path class="ar" d="M168 83 L190 83"></path>
+            <path class="ar" d="M350 83 L372 83"></path>
+            <path class="ar" d="M532 83 L554 83"></path>
+            <path class="ar" d="M714 83 L736 83"></path>
+          </svg>
+        </div>
+        <p class="note">This flow is used to explain why similar symptoms can produce different work scopes depending on access, material compatibility, and verification requirements.</p>
+      </section>
+
+      <section aria-labelledby="standards">
+        <h2 id="standards">Technical Standards &amp; Local Context</h2>
+        <p>Plumbing work in Folsom is commonly evaluated against municipal permitting and inspection expectations when a project changes core systems, alters major components, or affects public infrastructure interfaces. Documentation and inspection sequencing can also influence scheduling and the definition of a complete scope.</p>
+        <p class="panel">Formal regulatory reference for building and permitting guidance is maintained by the City of Folsom Community Development and Building Division: <a href="https://www.folsom.ca.us/government/community-development/building" target="_blank" rel="noopener noreferrer">City of Folsom building and permitting standards</a>.</p>
+      </section>
+
+      <section aria-labelledby="factors">
+        <h2 id="factors">Cost &amp; Complexity Factors</h2>
+        <table>
+          <caption>Common factors that shape service scope for average plumbing costs in folsom 2026</caption>
+          <thead>
+            <tr>
+              <th scope="col">Factor</th>
+              <th scope="col">Why it changes complexity</th>
+              <th scope="col">Typical operational effect</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Access and finish removal</td>
+              <td>Hidden piping behind walls, under slabs, or in tight cavities can require additional entry and restoration planning.</td>
+              <td>Longer setup and containment; broader restoration coordination.</td>
+            </tr>
+            <tr>
+              <td>Material transitions</td>
+              <td>Mixed systems (legacy materials combined with modern replacements) often require compatible fittings and verified connections.</td>
+              <td>More time on isolation and validation of joins.</td>
+            </tr>
+            <tr>
+              <td>Drain and sewer diagnostics</td>
+              <td>Intermittent backups can require confirmation of obstruction type and line condition before selecting a remedy.</td>
+              <td>Expanded diagnostic workflow prior to execution.</td>
+            </tr>
+            <tr>
+              <td>Verification and documentation</td>
+              <td>Testing for secondary leaks or performance issues after repairs can be necessary, especially after freeze-related stress events.</td>
+              <td>Additional checks following completion to confirm stability.</td>
+            </tr>
+            <tr>
+              <td>Permit and inspection alignment</td>
+              <td>Some scopes require municipal coordination, which can affect timing and completeness criteria.</td>
+              <td>Added administrative steps and inspection scheduling dependencies.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section aria-labelledby="faq" class="faq">
+        <h2 id="faq">Common Questions (FAQ)</h2>
+
+        <section>
+          <h3>What does “average plumbing costs” mean for Folsom in 2026?</h3>
+          <p>In this context, “average” describes typical scope patterns that combine diagnosis, repair execution, and verification under Folsom-area conditions during 2026.</p>
+        </section>
+
+        <section>
+          <h3>Why can two homes in Folsom receive different cost scopes for similar symptoms?</h3>
+          <p>Differences in access, piping materials, and the need for additional diagnostics or verification steps can shift complexity even when the visible symptom looks similar.</p>
+        </section>
+
+        <section>
+          <h3>When do local permitting or inspection expectations affect plumbing scope in Folsom?</h3>
+          <p>Projects that modify core system components or require documented compliance steps may involve municipal coordination that shapes the completion criteria for the work.</p>
+        </section>
+      </section>
+
+    </article>
+  </main>
+
+  <footer>
+    <p>© 2026 Murray Plumbing · Serving Folsom, California</p>
+  </footer>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Plumber",
+        "@id": "https://murrayplumbing.net/#murray-plumbing-folsom-average-plumbing-costs-in-folsom-2026",
+        "inLanguage": "en-US",
+        "name": "Murray Plumbing",
+        "description": "Technical overview of average plumbing costs in folsom 2026 in Folsom, covering diagnostic workflow, local standards, and factors that influence service complexity.",
+        "areaServed": "Folsom, California",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 38.6579,
+          "longitude": -121.1674
+        },
+        "serviceArea": {
+          "@type": "GeoCircle",
+          "geoMidpoint": {
+            "@type": "GeoCoordinates",
+            "latitude": 38.6579,
+            "longitude": -121.1674
+          },
+          "geoRadius": 14000
+        },
+        "knowsAbout": [
+          "diagnostic plumbing evaluation",
+          "repair scope definition",
+          "drain and sewer line assessment",
+          "water heater service planning",
+          "permit and inspection coordination"
+        ],
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "itemListElement": [
+            { "@type": "Offer", "name": "average plumbing costs in folsom 2026" },
+            { "@type": "Offer", "name": "residential plumbing diagnostics in Folsom" },
+            { "@type": "Offer", "name": "scope documentation and verification" }
+          ]
+        },
+        "sameAs": [
+          "https://sites.google.com/view/plumberfolsom/average-plumbing-costs-in-folsom-2026",
+          "https://www.murrayplumbing.net/average-plumbing-costs-folsom-ca-2026-murray-plumbing/"
+        ],
+        "citation": "https://www.folsom.ca.us/government/community-development/building"
+      },
+      {
+        "@type": "FAQPage",
+        "inLanguage": "en-US",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-folsom-average-plumbing-costs-in-folsom-2026"
+        },
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What does “average plumbing costs” mean for Folsom in 2026?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "In this context, “average” describes typical scope patterns that combine diagnosis, repair execution, and verification under Folsom-area conditions during 2026."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Why can two homes in Folsom receive different cost scopes for similar symptoms?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Differences in access, piping materials, and the need for additional diagnostics or verification steps can shift complexity even when the visible symptom looks similar."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "When do local permitting or inspection expectations affect plumbing scope in Folsom?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Projects that modify core system components or require documented compliance steps may involve municipal coordination that shapes the completion criteria for the work."
+            }
+          }
+        ]
+      },
+      {
+        "@type": "HowTo",
+        "inLanguage": "en-US",
+        "name": "How average plumbing costs in folsom 2026 Works in Folsom",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-folsom-average-plumbing-costs-in-folsom-2026"
+        },
+        "step": [
+          {
+            "@type": "HowToStep",
+            "name": "Collect symptoms and property context",
+            "text": "Document the reported issue, relevant history, and any access constraints that can affect diagnostic approach."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Run targeted diagnostics",
+            "text": "Use appropriate inspection methods to confirm the cause and location of the problem before defining the scope."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Define scope and materials",
+            "text": "Translate findings into a clear work scope that accounts for compatibility, access, and necessary restoration."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Execute the repair or installation",
+            "text": "Perform the selected remedy using proper connections and workmanship practices aligned with local expectations."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Verify performance and document completion",
+            "text": "Test system function and confirm stability after repair, including post-work checks where secondary leaks are possible."
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+</body>
+</html>
 
